# djangoviz

./: .gitignore  Pipfile  README.md  pyproject.toml  run_tests.py  settings.py  setup.py
.github/workflows/: cd-pypi.yaml  ci.yaml  djangoviz-PyPI.yaml  djangoviz-test.yaml
djangoviz/: apps.py
djangoviz/djangoviz/management/commands/: djangoviz.py
djangoviz/management/commands/: djangoviz.py
tests/: tests.py
tests/app1/: apps.py  models.py
tests/app1/migrations/: 0001_initial.py
tests/app2/: apps.py  models.py
